add jquery to repo

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 				<a href="#footer-link-5">Footer Link 5</a>
 			</nav>
 		</footer>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="./vendor/jquery-1.11.3.min.js"></script>
     <script type="text/javascript">
         console.log("i'm using jquery for speed, would rather finish the task");
         var slideSpeed = 400,
